# idml-to-pdf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: .main.rs.swp  decompressor.rs  idml_parser.rs  lib.rs  main.rs  parser.rs  pdf_printer.rs  printer.rs  story_parser.rs
src/idml_parser/: designmap_parser.rs  fonts_parser.rs  formats.rs  graphic_parser.rs  idml_package.rs  mod.rs  package_parser.rs  spread_parser.rs  story_parser.rs  styles_parser.rs
src/idml_parser/styles/: character_style.rs  commom_text_properties.rs  mod.rs  object_style.rs  paragraph_style.rs
src/pdf_printer/: color_manager.rs  font_manager.rs  mod.rs  pdf_utils.rs  polygon.rs  printer.rs  transforms.rs
src/pdf_printer/page_items/: mod.rs  polygon.rs  textframe.rs
test/4pages/4pages Folder/: 4pages.idml
test/basic_shapes/: shapes.idml
test/masterspread/: masterspread.idml
test/open_path/: open_path.idml
test/plain_text/: text.idml
test/rectangle/: rectangle.idml
test/textframe/: textframe.idml
test/textframe_story/: textframe_story.idml
tests/font_loading/: font_loading.idml
tests/textframe/: textframe.idml
