[package]
name = "idml_to_pdf"
version = "0.1.0"
authors = ["askepen <aske@daske.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libharu-sys = "0.0.1"
serde_derive = "1.0"
serde = { version="^1.0.117", features = ["derive"] }
quick-xml = { version = "^0.20.0", features = ["serialize"] }
zip-extract = "0.1.0"
regex = "1"
derive-getters = "^0.2.0"
dirs = "3.0"